# hive

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  Makefile  QUICKSTART.md  README.md  beehive.sh  pyproject.toml  pytest.ini  simple_test.py
.githooks/: install.sh  pre-commit
.github/: dependabot.yml
.github/workflows/: beaver  beaver.yml  ci.yml
analysis_reports/: code_metrics_20250723_083303.json
bees/: __init__.py  analyst_bee.py  base_bee.py  cli.py  config.py  conftest.py  conversation_logger.py  conversation_manager.py  exceptions.py  init_test_db.py  logging_config.py  queen_bee.py  test_assignment.py  test_full_workflow_integration.py  test_queen_bee_unit.py  test_reporting.py  test_tmux_communication.py  test_worker_bee_unit.py  worker_bee.py
docs/: README.md  api_reference.md  developer_guide.md  operations_guide.md  tutorial.md
hive/: hive_memory.db  schema.sql
memory/: context_manager.py
roles/: analyst.md  developer.md  qa.md  queen.md
scripts/: agent_poller.sh  beekeeper_wrapper.sh  conversation_daemon.py  init_hive.sh  inject_roles.sh  install-pre-commit.sh  reminder_daemon.sh  send_keys_helper.sh  task_manager.sh
tests/: README.md  __init__.py  conftest.py  test_base_bee_errors.py  test_config.py  test_exceptions.py  test_logging.py
tests/conversation/: __init__.py  test_conversation_daemon.py  test_conversation_integration.py  test_conversation_logger.py  test_conversation_manager.py  test_conversation_performance.py
tests/fixtures/: sample_conversations.json
tests/utils/: database_helpers.py  mock_helpers.py
web/: .gitignore
web/backend/: .gitignore  main.py  pyproject.toml
web/backend/api/: agents.py  instructions.py  tasks.py
web/backend/database/: __init__.py  connection.py
web/backend/models/: __init__.py  schemas.py
web/backend/websocket/: __init__.py  manager.py
web/frontend/: .gitignore  package.json  tailwind.config.js  vite.config.ts
web/frontend/public/: index.html
web/frontend/src/: App.tsx  index.css  index.tsx
web/frontend/src/components/: AgentStatus.tsx  Dashboard.tsx  InstructionForm.tsx  SystemHealth.tsx  TaskList.tsx
web/frontend/src/hooks/: useWebSocket.ts
web/frontend/src/services/: api.ts
web/frontend/src/types/: index.ts
web/frontend/src/utils/: timezone.ts  timezoneTest.ts
